# kserve

./: .codecov.yaml  .cov-ignore  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yml  .itermconfig  .ko.yaml  .pre-commit-config.yaml  .travis.yml  ADOPTERS.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.executor  Dockerfile.openEuler  FIX_SUMMARY.md  Gopkg.toml  KUSTOMIZE_TO_HELM_EVALUATION.md  MAINTAINERS.md  Makefile  Makefile.overrides.mk  Makefile.precommit.mk  Makefile.tools.mk  OWNERS  PROJECT  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  agent.Dockerfile  agent.Dockerfile.openEuler  batcher.Dockerfile  bundle.Dockerfile  cover.out  coverage.sh  create_dependabot.sh  (+25 more)
python/aiffairness/: Makefile  README.md  conftest.py  pyproject.toml  setup.py
python/aiffairness/aifserver/: __init__.py  __main__.py  model.py  test_model.py
python/aixexplainer/: Makefile  README.md  pyproject.toml  setup.py
python/aixexplainer/aixserver/: __init__.py  __main__.py  aix_images.py  aix_tabular.py  aix_text.py  explainer.py  explainer_wrapper.py  model.py  parse.py
python/alibiexplainer/: Makefile  README.md  pyproject.toml  setup.py
python/alibiexplainer/alibiexplainer/: __init__.py  __main__.py  anchor_images.py  anchor_tabular.py  anchor_text.py  explainer.py  explainer_method.py  explainer_wrapper.py  parser.py  test_explainer_wrapper.py
python/alibiexplainer/tests/: __init__.py  test_anchor_images.py  test_anchor_tabular.py  test_anchor_text.py  test_parser.py  utils.py
python/artexplainer/: Makefile  README.md  pyproject.toml  setup.py
python/artexplainer/artserver/: __init__.py  __main__.py  model.py
python/autogluonserver/: Makefile  OPENSHIFT_AI_CUSTOM_RUNTIME.md  README.md  pyproject.toml
python/autogluonserver/autogluonserver/: __init__.py  __main__.py  artifact_layout.py  autogluon_model_repository.py  model.py  predictor_detect.py  predictor_factory.py  runtime_paths.py  safe_deserialize.py  tabular_model.py  test_autogluon_model_repository.py  test_model.py  test_predictor_factory.py  test_timeseries_model.py  timeseries_model.py  version_compat.py
python/autogluonserver/tests/: test_autogluon_model_repository.py  test_model.py  test_predictor_detect.py  test_predictor_factory.py  test_runtime_paths.py  test_safe_deserialize.py  test_timeseries_model.py  test_version_compat.py
python/catboostserver/: Makefile  README.md  pyproject.toml  setup.py
python/catboostserver/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
python/catboostserver/catboostserver/: __init__.py  __main__.py  catboost_model_repository.py  catboost_model_repository_test.py  model.py  model_test.py  test_catboost_model_repository.py  test_model.py
python/custom_model/: Makefile  Tiltfile  input_grpc.json  input_v2_grpc.json  model.py  model_grpc.py  model_remote.py  prime_client.py  prime_pb2.py  prime_pb2_grpc.py  prime_server.py  pyproject.toml  requirements.txt  runtime.txt  service.yaml  setup.py  test.ipynb  test_client.py  tilt_option.json  transformer.json
python/custom_tokenizer/: config.pbtxt  data_processing.py  pyproject.toml  tokenization.py  transformer.py
python/custom_transformer/: Makefile  Procfile  model.py  model_grpc.py  pyproject.toml  requirements.txt  setup.py
python/huggingfaceserver/: Dockerfile  Makefile  README.md  health_check.py  health_check.sh  pyproject.toml  requirements.txt  test-health-check.py  test_health_check.py
python/huggingfaceserver/huggingfaceserver/: AsyncGenerateOutput.py  __init__.py  __main__.py  async_generate_stream.py  completion.py  completion_base.py  completions_base.py  completions_utils.py  encoder_model.py  generative_model.py  huggingface_model_repository.py  model.py  request_logger.py  stop_sequence_stopping_criteria.py  task.py  test_model.py  test_output.py  time_series_model.py  utils.py  vllm_async_engine.py  vllm_completions.py
python/huggingfaceserver/tests/: server.py  setup_vllm.sh  test_encoder_label_mapping.py  test_generation_config.py  test_mean_pooling.py  test_model.py  test_output.py  test_timeseries.py  test_token_classification_offsets.py  test_vlllm_model.py  test_vllm.py  test_vllm_chat_with_reasoning.py  test_vllm_chat_with_tools.py  test_vllm_embeddings.py  test_vllm_encoder.py  test_vllm_generative.py  test_vllm_lora.py  test_vllm_model.py  test_vllm_rerank.py  vllm_mock_outputs.py
python/kserve/: .gitignore  .openapi-generator-ignore  Cachiman  Makefile  OWNERS  README.md  pyproject.toml  requirements.txt  setup.py
python/kserve/docs/: EventLoop.md  GithubComKserveKservePkgApisDistributedV1alpha1DistributedInferenceService.md  GithubComKserveKservePkgApisDistributedV1alpha1DistributedInferenceServiceList.md  KFServingClient.md  KnativeAddressable.md  KnativeCondition.md  KnativeStatus.md  KnativeURL.md  KnativeVolatileTime.md  V1alpha1BuiltInAdapter.md  V1alpha1CacheCounts.md  V1alpha1CacheNodeCacheInfo.md  V1alpha1ClusterCachedModel.md  V1alpha1ClusterCachedModelList.md  V1alpha1ClusterCachedModelSpec.md  V1alpha1ClusterLocalModel.md  V1alpha1ClusterLocalModelList.md  V1alpha1ClusterLocalModelNodeGroup.md  V1alpha1ClusterLocalModelNodeGroupList.md  V1alpha1ClusterLocalModelNodeGroupSpec.md  V1alpha1ClusterLocalModelSpec.md  V1alpha1ClusterServingRuntime.md  V1alpha1ClusterServingRuntimeList.md  V1alpha1ClusterStorageContainer.md  V1alpha1ClusterStorageContainerList.md  V1alpha1Container.md  V1alpha1GPUCompatibilitySummary.md  (+171 more)
python/lgbserver/: Makefile  README.md  pyproject.toml  setup.py
python/paddleserver/: Makefile  OWNERS  README.md  pyproject.toml  setup.py
python/pmmlserver/: Makefile  README.md  pyproject.toml  setup.py
python/predictiveserver/: Makefile  README.md  pyproject.toml
python/sklearnserver/: Makefile  README.md  pyproject.toml  setup.py  test_sk.py
python/storage/: README.md  pyproject.toml
python/storage-initializer/: pyproject.toml  setup.py  storage.py
python/xgbserver/: Makefile  README.md  __main__.py  dev_requirements.txt  model.bst  model.py  pyproject.toml  setup.py
(+6639 files in other folders)
