[tool.poetry]
name = "aifserver"
version = "0.15.2"
description = "'Model Server implementation for AI fairness. Not intended for use outside KServe Frameworks Images."
authors = ["Andrew Butler <Andrew.Butler@ibm.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kserve/kserve/tree/master/python/aiffairness"
packages = [
    { include = "aifserver" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kserve = {path = "../kserve", develop = true}
aif360 = "^0.6.1"
nest-asyncio = "^1.5.8"
requests = {version = "^2.24.0", extras = ["security"]}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^5.0.0"
mypy = "^0.991"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
