[project]
authors = [
    {name = "Andrew Butler", email = "Andrew.Butler@ibm.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "aif360<1.0.0,>=0.6.1",
    "nest-asyncio<2.0.0,>=1.5.8",
    "requests[security]<3.0.0,>=2.24.0",
]
name = "aifserver"
version = "0.15.2"
description = "'Model Server implementation for AI fairness. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[project.urls]
repository = "https://github.com/kserve/kserve/tree/master/python/aiffairness"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "mypy<1.0,>=0.991",
]
dev = [
    "black[colorama]~=24.3.0",
]
