[tool.poetry]
name = "aixserver"
version = "0.10.1"
description = "Model Server implementation for AI eXplainability with LIME. Not intended for use outside KServe Frameworks Images."
authors = ["Andrew Butler <Andrew.Butler@ibm.com>"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
readme = "README.md"
packages = [
    { include = "aixserver" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
kserve = {path = "../kserve", develop = true}
lime = "^0.1.1.37"
nest-asyncio = "^1.4.0"
aix360 = "^0.2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
