[tool.poetry]
name = "alibiexplainer"
version = "0.10.0"
description = "Model Explanation Server. Not intended for use outside KServe Frameworks Images."
authors = ["cliveseldon <cc@seldon.io>"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
readme = "README.md"
packages = [
    { include = "alibiexplainer" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kserve = {path = "../kserve", develop = true}
tensorflow = "^2.5.0"  # see https://github.com/python-poetry/poetry/issues/4605
alibi = {version = "^0.6.4", extras = ["shap"]}
dill = "^0.3.6"
nest-asyncio = "~1.4.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
sklearnserver = {path = "../sklearnserver", develop=true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
