[tool.poetry]
name = "alibiexplainer"
version = "0.11.0"
description = "Model Explanation Server. Not intended for use outside KServe Frameworks Images."
authors = ["cliveseldon <cc@seldon.io>"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
readme = "README.md"
packages = [
    { include = "alibiexplainer" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kserve = { path = "../kserve", extras = ["storage"], develop = true }
alibi = { version = "^0.9.3", extras = ["shap", "tensorflow"] }
dill = "^0.3.6"
nest-asyncio = "~1.4.0"
llvmlite = ">0.38.1" # needed since poetry chooses lower version of llvmlite which is not supported by python 3.9 above

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
sklearnserver = { path = "../sklearnserver", develop = true }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
