[project]
authors = [
    {name = "Andrew Butler", email = "Andrew.Butler@ibm.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "adversarial-robustness-toolbox[keras]<2.0.0,>=1.18.1",
    "nest-asyncio<2.0.0,>=1.5.8",
    "pillow<11.0.0,>=10.3.0",
    "h5py==3.10.0",
]
name = "artserver"
version = "0.16.0rc1"
description = "Model Server implementation for AI Robustness Toolbox. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "mypy<1.0,>=0.991",
]
dev = [
    "black[colorama]~=24.3.0",
]
