[project]
authors = [
    {name = "Andrew Butler", email = "Andrew.Butler@ibm.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "adversarial-robustness-toolbox[keras]<2.0.0,>=1.18.1",
    "nest-asyncio<2.0.0,>=1.5.8",
    "pillow<11.0.0,>=10.3.0",
    "h5py==3.10.0",
    "uvloop>=0.21.0" ,
    "httptools>=0.6.0" ,
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "ml-dtypes>=0.3.0 "
]
name = "artserver"
version = "0.19.0rc0"
description = "Model Server implementation for AI Robustness Toolbox. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "mypy<1.0,>=0.991",
]
dev = [
    "black[colorama]~=24.3.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "ppc64le-wheels"
url = "https://wheels.developerfirst.ibm.com/ppc64le/linux"

grpcio = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
scipy = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
grpcio-tools = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
numpy = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
pandas = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
psutil = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
pyyaml = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
uvloop = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
httptools = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
scikit-learn = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
pillow = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
h5py = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
ml-dtypes = [
    { index = "pypi", marker = "platform_machine != 'ppc64le'" },
    { index = "ppc64le-wheels", marker = "platform_machine == 'ppc64le'" },
]
