[project]
authors = [
    {name = "KServe Authors", email = "kserve@googlegroups.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "kserve-storage @ file:///${PROJECT_ROOT}/../storage",
    "numpy==2.1.3",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "autogluon.tabular==1.4.0",
    "xgboost==3.0.5",
    "lightgbm==4.6.0",
    "catboost==1.2.8",
    "fastai==2.8.5",
    "torch==2.7.1",
    "ipython",
]
name = "autogluonserver"
version = "0.1.0"
description = "Model Server implementation for AutoGluon TabularPredictor. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.2.0",
    "pytest-cov<5.0.0,>=4.0.0",
    "mypy<1.0,>=0.991",
    "pytest-asyncio<1.0.0,>=0.23.4",
]
dev = [
    "black[colorama]~=24.3.0",
]
