[project]
authors = [
    {name = "Michal Zabinski", email = "mzabinsk@redhat.com"},
    {name = "Dorota Laczak", email = "dlaczak@redhat.com"}
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "kserve-storage @ file:///${PROJECT_ROOT}/../storage",
    "autogluon.tabular[all]==1.5.0"
]
name = "autogluonserver"
version = "0.1.0"
description = "Model Server implementation for AutoGluon TabularPredictor. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.2.0",
    "pytest-cov<5.0.0,>=4.0.0",
    "mypy<1.0,>=0.991",
    "pytest-asyncio<1.0.0,>=0.23.4",
]
dev = [
    "black[colorama]~=24.3.0",
]
