[project]
authors = [
    {name = "Michal Zabinski", email = "mzabinsk@redhat.com"},
    {name = "Dorota Laczak", email = "dlaczak@redhat.com"}
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve",
    "kserve-storage",
    "catboost==1.2.8",
    "lightgbm==4.6.0",
    "xgboost==3.1.3",
    "torch==2.9.1",
    "fastai==2.8.5",
    "autogluon.tabular==1.5.0",
    "autogluon.timeseries==1.5.0",
]
name = "autogluonserver"
version = "0.1.0"
description = "Model Server implementation for AutoGluon TabularPredictor and TimeSeriesPredictor. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.2.0",
    "pytest-cov<5.0.0,>=4.0.0",
    "mypy<1.0,>=0.991",
    "pytest-asyncio<1.0.0,>=0.23.4",
]
dev = [
    "black[colorama]~=24.3.0",
]

[tool.uv.sources]
kserve = { path = "../kserve", editable = false }
kserve-storage = { path = "../storage", editable = false }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
