[project]
authors = [
    {name = "Dan Sun", email = "dsun20@bloomberg.net"},
]
license = {text = "https://github.com/kserve/kserve/blob/master/LICENSE"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
]
name = "custom_tokenizer"
version = "0.15.2"
description = "Custom Tokenizer Examples. Not intended for use outside KServe Frameworks Images."
authors = ["Dan Sun <dsun20@bloomberg.net>"]
license = "Apache-2.0"
packages = [
    { include = "*.py" }
]
