[project]
authors = [
    {name = "Dan Sun", email = "dsun20@bloomberg.net"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
]
name = "custom_tokenizer"
version = "0.15.2"
description = "Custom Tokenizer Examples. Not intended for use outside KServe Frameworks Images."

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "mypy<1.0,>=0.991",
]
dev = [
    "black[colorama]~=24.3.0",
]
