[project]
authors = [
    {name = "Dan Sun", email = "dsun20@bloomberg.net"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "torchvision==0.26.0+cpu",
    "torch==2.11.0+cpu",
    "pillow<11.0.0,>=10.3.0",
]
name = "custom_transformer"
version = "0.18.0rc1"
description = "Custom Transformer Examples. Not intended for use outside KServe Frameworks Images."

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "mypy<1.0,>=0.991",
]
dev = [
    "black[colorama]~=24.3.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

