[project]
authors = [
    {name = "Dan Sun", email = "dsun20@bloomberg.net"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "kserve[llm] @ file:///${PROJECT_ROOT}/../kserve",
    "kserve-storage @ file:///${PROJECT_ROOT}/../storage",
    "transformers>=5.5.3",
    "accelerate<2.0.0,>=1.6.0",
    "bitsandbytes>=0.45.3",
    "modelscope<2.0.0,>=1.27.0", # CVE-2025-51427
    "setuptools>=78.1.1", # CVE-2025-47273
]
name = "huggingfaceserver"
version = "0.19.0"
description = "Model Server implementation for huggingface. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[tool.uv]
override-dependencies = [
    "pillow>=12.2.0", # CVE-2026-40192
    "azure-core>=1.38.0", # CVE-2026-21226
    "dulwich>=1.2.5", # CVE-2026-42305
    "cbor2>=5.9.0", # CVE-2025-68131 (DSE-57403)
    "sentencepiece>=0.2.1", # CVE-2026-26209, CVE-2026-1260 (DSE-57403)
    "jaraco.context>=6.1.0", # CVE-2026-23949 (DSE-57404)
    "black>=26.3.1", # CVE-2026-32274 (DSE-57404)
]

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "mypy<1.0,>=0.991",
    "pytest-asyncio<1.0.0,>=0.23.4",
    "pytest-httpx<1.0.0,>=0.30.0",
    "einops<1.0.0,>=0.8.0",
    "openai>=2.0.0",
]
dev = [
    "black[colorama]~=24.3.0",
]
