[project]
authors = [
    {name = "The KServe Authors", email = "dsun20@bloomberg.net"},
    {name = "The KServe Authors", email = "ellisbigelow@google.com"},
    {name = "The KServe Authors", email = "hejinchi@cn.ibm.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "uvicorn[standard]<1.0.0,>=0.30.6",
    "fastapi>=0.115.3",
    "cloudevents<2.0.0,>=1.6.2",
    "six<2.0.0,>=1.16.0",
    "kubernetes>=23.3.0",
    "python-dateutil<3.0.0,>=2.8.0",
    "numpy<3.0.0,>=1.26.0",
    "psutil<6.0.0,>=5.9.6",
    "grpcio<2.0.0,>=1.60.0",
    "grpc-interceptor<1.0.0,>=0.15.4",
    "protobuf<5.0.0,>=4.25.4",
    "prometheus-client<1.0.0,>=0.20.0",
    "orjson<4.0.0,>=3.9.15",
    "httpx<1.0.0,>=0.27.2",
    "timing-asgi<1.0.0,>=0.3.0",
    "tabulate<1.0.0,>=0.9.0",
    "pandas<3.0.0,>=2.2.0",
    "pydantic<3.0.0,>=2.5.0",
    "pyyaml<7.0.0,>=6.0.0",
]
name = "kserve"
version = "0.15.2"
description = "KServe Python SDK"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
repository = "https://github.com/kserve/kserve/tree/master/python/kserve"

[project.optional-dependencies]
storage = [
    "requests<3.0.0,>=2.32.2",
    "google-cloud-storage<3.0.0,>=2.14.0",
    "azure-storage-blob<13.0.0,>=12.20.0",
    "azure-storage-file-share<13.0.0,>=12.16.0",
    "azure-identity<2.0.0,>=1.15.0",
    "boto3<2.0.0,>=1.29.0",
    "huggingface-hub[hf-transfer]>=0.32.0",
]
logging = [
    "asgi-logger<1.0.0,>=0.1.0",
]
ray = [
    "ray[serve]>=2.43.0",
]
llm = [
    "vllm==0.10.1",
]

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-xdist<4.0.0,>=3.0.2",
    "pytest-asyncio<1.0.0,>=0.23.4",
    "pytest-httpx<1.0.0,>=0.30.0",
    "mypy<1.0,>=0.991",
    "portforward<1.0.0,>=0.6.2",
    "avro<2.0.0,>=1.11.0",
    "tomlkit<1.0.0,>=0.12.0",
    "jinja2<4.0.0,>=3.1.4",
    "grpcio-testing<2.0.0,>=1.60.0",
]
dev = [
    "black[colorama]~=24.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"