[project]
authors = [
    {name = "The KServe Authors", email = "dsun20@bloomberg.net"},
    {name = "The KServe Authors", email = "ellisbigelow@google.com"},
    {name = "The KServe Authors", email = "hejinchi@cn.ibm.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "uvicorn[standard]<1.0.0,>=0.30.6",
    "fastapi>=0.115.3,<1.0.0",
    "starlette>=1.0.1", # CVE-2026-48710 Starlette: Security restriction bypass via malformed HTTP Host header
    "cloudevents<2.0.0,>=1.6.2",
    "six<2.0.0,>=1.16.0",
    "kubernetes>=23.3.0",
    "python-dateutil<3.0.0,>=2.8.0",
    "numpy<3.0.0,>=1.26.0",
    "psutil<6.0.0,>=5.9.6",
    "grpcio<2.0.0,>=1.73.0",
    "grpcio-tools<2.0.0,>=1.73.0",
    "grpc-interceptor<1.0.0,>=0.15.4",
    "protobuf<7.0.0,>=6.33.5",
    "prometheus-client<1.0.0,>=0.20.0",
    "orjson<4.0.0,>=3.11.6", # CVE-2025-67221
    "httpx<1.0.0,>=0.27.2",
    "timing-asgi<1.0.0,>=0.3.0",
    "tabulate<1.0.0,>=0.9.0",
    "pandas<3.0.0,>=2.2.0",
    "pydantic<3.0.0,>=2.5.0",
    "pyyaml<7.0.0,>=6.0.0",
    "urllib3>=2.7.0", # CVE-2026-21441
]
name = "kserve"
version = "0.19.0"
description = "KServe Python SDK"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
repository = "https://github.com/kserve/kserve/tree/master/python/kserve"

[project.optional-dependencies]
storage = [
    "kserve-storage==0.19.0"
]
logging = [
    "asgi-logger<1.0.0,>=0.1.0",
]
ray = [
    "ray[serve]>=2.43.0",
]
llm = [
    "vllm==0.24.0",
]

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-xdist<4.0.0,>=3.0.2",
    "pytest-json-report<2.0.0,>=1.5.0",
    "pytest-asyncio<1.0.0,>=0.23.4",
    "pytest-httpx<1.0.0,>=0.30.0",
    "mypy<1.0,>=0.991",
    "portforward<1.0.0,>=0.6.2",
    "avro<2.0.0,>=1.11.0",
    "tomlkit<1.0.0,>=0.12.0",
    "jinja2<4.0.0,>=3.1.4",
    "grpcio-testing<2.0.0,>=1.73.0",
    "httpx-retries>=0.4.5,<1.0.0",
    "boto3>=1.35.0,<2.0.0",
    "pyarrow>=18.0.0,<20.0.0",
]
dev = [
    "black[colorama]~=24.3.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"
override-dependencies = [
    "aiohttp>=3.13.4", # CVE-2026-34520
    "h11>=0.16.0", # CVE-2025-43859
    "cryptography>=46.0.7", # CVE-2026-39892
    "python-multipart>=0.0.27", # CVE-2026-42561
    "pyjwt>=2.13.0", # CVE-2026-48526
    "pyasn1>=0.6.3", # CVE-2026-30922
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# UV workspace source for local dependency resolution
[tool.uv.sources]
kserve-storage = { path = "../storage", editable = true }
