[project]
authors = [
    {name = "Lin Yiming", email = "linyiming@ainnovation.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "kserve @ file:///${PROJECT_ROOT}/../kserve",
    "kserve-storage @ file:///${PROJECT_ROOT}/../storage",
    "lightgbm[scikit-learn]~=4.5.0",
    "pandas<3.0.0,>=2.2.0",
]
name = "lgbserver"
version = "0.16.0rc1"
description = "Model Server implementation for LightGBM. Not intended for use outside KServe Frameworks Images."
readme = "README.md"

[dependency-groups]
test = [
    "pytest<8.0.0,>=7.4.4",
    "pytest-asyncio<1.0.0,>=0.23.4",
    "pytest-cov<6.0.0,>=5.0.0",
    "mypy<1.0,>=0.991",
]
dev = [
    "black[colorama]~=24.3.0",
]
