[project]
name = "paddleserver"
version = "0.15.2"
description = "Model Server implementation for Paddle. Not intended for use outside KServe Frameworks Images"
authors = ["Zhengyuan Zhang <zhangzhengyuan0604@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Zhengyuan Zhang", email = "zhangzhengyuan0604@gmail.com" },
]
requires-python = ">=3.9,<3.13"
dependencies = [
  "kserve[storage] @ file:///${PROJECT_ROOT}/../kserve",
  "paddlepaddle>=2.6.1; platform_system != 'Windows'",
  "setuptools>=70.0.0"
]

[dependency-groups]
test = [
  "pytest>=7.4.4",
  "pytest-cov>=5.0.0",
  "mypy>=0.991",
  "opencv-python>=4.10.0"
]
dev = [
  "black[colorama]~=24.3.0"
]
